--- a/src/Arii/ATSBundle/Resources/views/layout.html.twig
+++ b/src/Arii/ATSBundle/Resources/views/layout.html.twig
@@ -5,148 +5,67 @@
 {% endblock dhtmlx %}
 {% block dhtmlx_plus %}
 {% endblock dhtmlx_plus %}
-{% block body %}
-{% endblock body %}
-{% block script %}
-<script>
-function StateRibbon (itemid,state) {
-    switch(itemid) {
-         case 'box':
-            box = (state?1:0);
-            globalLayout.progressOn();
-            break;
-         case 'only_warning':
-            only_warning = (state?1:0);
-            globalLayout.progressOn();
-            break;
-        default:
-            alert(itemid);
-    }
-    GlobalRefresh();    
-}
+{% block onload %}
+<script language="javascript">
+var bundle='ATS';
+var db="{{ db }}";
+var max_history = 0; // pas d'historique
+var chained = 0; // que des chaines normales
+var only_warning = 0;
+var update = 30;
+var autorefresh;
+var status;
+var sort="last";
+var update=5;
 
-function ClickRibbon (itemid,state) {
-    switch(itemid) {
-    case '-0.5': case '-0.25': case '-0.20':
-    case '-1': case '-2': case '-3': case '-4': case '-5': case '-6':
-    case '-7': case '-14': case '-21': 
-    case '-30': case '-60': case '-90': case '-120': case '-180':
-    case '-365':
-        dhx4.ajax.get( "{{ url('arii_session_update') }}?ref_past="+itemid, function() {
-            var currentTime = new Date();
-            var newTime = new Date();
-            newTime.setDate(currentTime.getDate() + Number(itemid) );
-            var day = newTime.getDate();
-            var month = newTime.getMonth()+1;
-            var year = newTime.getFullYear();
-            if (day < 10){
-            day = "0" + day;
-            }
-            if (month < 10){
-                month = "0" + month;
-            }
-            myRibbon.setItemText( "ref_past", year + "-" + month + "-" +  day );
-            globalLayout.progressOn();
-            GlobalRefresh();    
-        });
-        break;
-     case '5':
-    case '30':
-    case '60':
-    case '300':
-    case '900':
-    case '1800':
-    case '3600':
-        update = itemid;
-        dhx4.ajax.get( "{{ url('arii_session_update') }}?refresh="+itemid, function() {
-            globalLayout.progressOn();
-            GlobalRefresh();
-        });
-        break;
-    case 'menu_index':
-        window.location = "{{ url('arii_ATS_index') }}";
-        break;
-    case 'menu_boxes':
-        window.location = "{{ url('arii_ATS_boxes') }}";
-        break;
-    case 'menu_jobs':
-        window.location = "{{ url('arii_ATS_jobs') }}";
-        break;
-    case 'menu_calendars':
-        window.location = "{{ url('arii_ATS_calendars') }}";
-        break;
-    case 'menu_events':
-        window.location = "{{ url('arii_ATS_events') }}";
-        break;
-    case 'menu_processed':
-        window.location = "{{ url('arii_ATS_processed') }}";
-        break;
-    case 'menu_alarms':
-        window.location = "{{ url('arii_ATS_alarms') }}";
-        break;
-    case 'menu_errors':
-        window.location = "{{ url('arii_ATS_runtimes') }}";
-        break;
-    case 'menu_requests':
-        window.location = "{{ url('arii_ATS_requests') }}";
-        break;
-    case 'menu_servers':
-        window.location = "{{ url('arii_ATS_servers') }}";
-        break;
-    case 'menu_agents':
-        window.location = "{{ url('arii_ATS_agents') }}";
-        break;
-    case 'menu_audit':
-        window.location = "{{ url('arii_ATS_audit') }}";
-        break;
-    case 'menu_templates':
-        window.location = "{{ url('arii_ATS_templates') }}";
-        break;
-    case 'form':
-        window.location = "{{ url('arii_ATS_form') }}";
-        break;
-    case 'filter_edit':
-        window.location = "{{ url('arii_filters') }}";
-        break;
-    case 'filter_all':
-            globalLayout.cells("a").progressOn();
-            globalLayout.cells("b").progressOn();
-            dhx4.ajax.get( "{{ url('arii_session_update') }}?filter=-1"+itemid.substr(7), function(){
-                if (typeof GlobalRefresh == 'function') { GlobalRefresh(); }
-            });
-        break;
-    default:
-        if (itemid.substr(0,6)=='filter') {
-            globalLayout.cells("a").progressOn();
-            globalLayout.cells("b").progressOn();
-            // this.setItemText("current_filter",myRibbon.getItemOptionText('Filters',itemid));
-            dhx4.ajax.get( "{{ url('arii_session_update') }}?filter="+itemid.substr(7), function(){
-                if (typeof GlobalRefresh == 'function') { GlobalRefresh(); }
-                else if (typeof GridRefresh == 'function') { GridRefresh(); }
-                // on recree le ruban 
-                myRibbon.loadStruct("{{ url('json_ATS_ribbon') }}");
-            });
-        }
-        else if (itemid.substr(0,7)=='request') {
-            window.location = "{{ url('arii_ATS_requests') }}?request="+itemid.substr(8);
-        }
-        else if (itemid.substr(0,10)=='scheduler.') {
-            dhx4.ajax.get( "{{ url('arii_session_update') }}?scheduler="+itemid.substr(10), function(loader,response) {
-                dhtmlx.message({
-                    type: "Notice",
-                    text: loader.xmlDoc.responseText,
-                    width: "800"
-                });
-                if (typeof GlobalRefresh == 'function') { GlobalRefresh(); }
-                else if (typeof GridRefresh == 'function') { GridRefresh(); }
-                // on recree le ruban 
-                myRibbon.loadStruct("{{ url('json_ATS_ribbon') }}");
-            } );
-        }
-        else {
-            window.location = "{{ url('arii_ATS_index') }}"+itemid;
-        }
-    }
+dhtmlxEvent(window,"load",function(){   
+    var size=180;
+    globalLayout = new dhtmlXLayoutObject(document.body,"3T");  
+    globalLayout.cells("a").setHeight(120); 
+    globalLayout.cells("b").setWidth(size); 
+    globalLayout.cells("a").hideHeader();
+    globalLayout.cells("c").hideHeader();
+
+    myRibbon = globalLayout.cells("a").attachRibbon(); 
+    myRibbon.setIconPath( "{{ asset('/images/') }}" );
+    myRibbon.loadStruct("{{ url('json_ARII_ribbon') }}?bundle="+bundle, function() {});
+    myRibbon.attachEvent("onStateChange", StateRibbon );
+    myRibbon.attachEvent("onClick", ClickRibbon );
+
+    mySidebar = globalLayout.cells("b").attachSidebar({
+        icons_path: "{{ asset('/images/') }}",
+        // template: "tiles",
+        width: size,
+        items:
+        [
+            { id:"alarms", text: "{{ "Alarms" | trans }}", icon: "error.png" },
+            { id:"boxes", text: "{{ "Boxes" | trans }}", icon: "box.png" },
+            { id:"audit", text: "{{ "Audit" | trans }}", icon: "audit.png" },
+        ]
+    });
+    mySidebar.attachEvent("onBubbleClick", function(id, value){
+        // bubble clicked, your code here
+        // 'return true' means item allowed to be selected
+        // false - otherwise
+        return true;
+    });    
+    mySidebar.attachEvent("onSelect", function(id, value){
+        document.location.href = "{{ url('arii_ATS_index') }}/db/"+db+"/"+id;
+        return true;
+    });
+
+    globalLayout.cells("b").setText("{{ "Menu" | trans }}");     
+    Init();
+    GlobalRefresh();
+    autorefresh = setInterval( "GlobalRefresh()",update*1000);
+});
+</script>
+{% endblock onload %}
+{% block body %}{% endblock%}
+{% block script %}
+<script language="javascript">
+function GlobalRefresh() {
+    PageRefresh();
 }
 
 function Sendevent( Job, Event )
@@ -272,6 +191,6 @@ function Sendevent( Job, Event )
 }
 
 </script>
+{% include "AriiCoreBundle:Common:ribbon.js.twig" %}
 {% endblock script %}
-
             
