--- a/src/Arii/ATSBundle/Resources/views/Audit/index.html.twig
+++ b/src/Arii/ATSBundle/Resources/views/Audit/index.html.twig
@@ -1,164 +1,88 @@
-{# src/Arii/JIDBundle/Resources/views/Default/history.html.twig #}
 {% extends "AriiATSBundle::layout.html.twig" %}
 {% block body %}
-<script type="text/javascript">
-var max_history = 0; // pas d'historique
-var chained = 0; // que des standalone
-var only_warning = 0; // que les problemes
-var update=30;
-var autorefresh;
-var status;
+<script language="javascript">
+function Init() {
+    globalLayout.cells("c").setText("{{ "Audit" | trans}}");
+    myTabbar = globalLayout.cells("c").attachTabbar();
+    myTabbar.addTab("events","{{ "Events" | trans }}","120px",null,true);
+    myTabbar.addTab("jobs","{{ "Jobs" | trans }}","120px");
 
-dhtmlxEvent(window,"load",function(){     
-    globalLayout = new dhtmlXLayoutObject(document.body,"3L");  
-    globalLayout.cells("a").setWidth(355); 
-    globalLayout.cells("a").hideHeader(); 
-    globalLayout.cells("b").hideHeader(); 
-    globalLayout.cells("c").hideHeader(); 
-    globalLayout.cells("c").setHeight(260); 
+    myGridEvents = myTabbar.cells("events").attachGrid();
+    myGridEvents.setImagePath( "{{ asset('/images/') }}");
+    myGridEvents.setHeader("{{ "Date" | trans }},{{ "Event" | trans }},{{ "Job" | trans }},{{ "Status" | trans }},{{ "Variable" | trans }},{{ "User" | trans }},{{ "Domain" | trans }},{{ "Comment" | trans }},{{ "Ins." | trans }}");
+    myGridEvents.attachHeader("#text_filter,#select_filter,#text_filter,#select_filter,#text_filter,#select_filter,#select_filter,#text_filter,#select_filter");
+    myGridEvents.setInitWidths("140,180,*,100,*,120,120,*,0");
+    myGridEvents.setColAlign("left,left,left,left,left,left,left,left,left");
+    myGridEvents.setColTypes("ro,ro,ro,ro,ro,ro,ro,ro,ro");
+    myGridEvents.setColSorting("date,str,str,str,str,str,str,str,str");
+    myGridEvents.enableAlterCss("","");
+    myGridEvents.init();    
+    myGridEvents.attachEvent("onRowDblClicked", Detail );
 
-    globalMenu = globalLayout.cells("a").attachMenu();
-    globalMenu.setIconsPath( "{{ asset('/images/') }}" );
-    globalMenu.loadStruct("{{ url('xml_menu') }}?route={{ app.request.attributes.get('_route') }}");
-
-    myRibbon = globalLayout.cells("a").attachRibbon(); 
-    myRibbon.setIconPath( "{{ asset('/images/') }}" );
-    myRibbon.loadStruct("{{ url('json_ATS_ribbon') }}");
-    myRibbon.attachEvent("onStateChange", StateRibbon );
-    myRibbon.attachEvent("onClick", ClickRibbon );
-
-    myDonut =  globalLayout.cells("a").attachChart({
-            view:"donut",
-            container:"pie_chart_container",
-            value:"#JOBS#",
-            label:"",
-            tooltip: "#STATUS#",
-            color: "#COLOR#",
-            border:false,
-            pieInnerText: "#JOBS#",
-            shadow: 0,
-            legend:{
-                width: 0,
-                template: "#STATUS#",
-                valign:"top",
-                align:"left"
-            } 
-    });
-    myDonut.load( "{{ url('xml_ATS_audit_pie') }}" );
-    
-    myGrid = globalLayout.cells("b").attachGrid();
-    myGrid.selMultiRows = true;
-    myGrid.setImagePath( "{{ asset('/images/') }}");
-    myGrid.setHeader("{{ "Date" | trans }},{{ "Type" | trans }},{{ "Attribute" | trans }},{{ "Value" | trans }},{{ "Login" | trans }},{{ "Domain" | trans }},{{ "Ed." | trans }}");
-    myGrid.attachHeader("#text_filter,#select_filter,#select_filter,#text_filter,#select_filter,#select_filter,#select_filter");
-    myGrid.setInitWidths("120,80,200,*,120,120,80");
-    myGrid.setColAlign("right,left,left,left,left,left,left");
-    myGrid.setColTypes("ro,ro,ro,ro,ro,ro,ch");
-    myGrid.setColSorting("date,str,str,str,str,str,int");
-    myGrid.enableAlterCss("","");
-    myGrid.init();
-    // Localisation
-    myGrid.setColumnHidden(1,true);
-    myGrid.setColumnHidden(6,true);
-    
-    myGrid.load( "{{ url('xml_ATS_audit_grid') }}");
-    myGrid.attachEvent("onRowDblClicked", Detail );
-
-    myDonut.attachEvent("onItemClick",function(id, value){
-        status = id;
-        myGrid.filterBy(4, status);  
-    });
-
-    myGridToolbar = globalLayout.cells("b").attachToolbar();
-    myGridToolbar.setIconsPath("{{ asset('/images/') }}");
-    myGridToolbar.loadStruct( "{{ url('xml_ATS_events_grid_toolbar') }}");
-    myGridToolbar.attachEvent("onClick",function(itemid){
+    myGridEventsToolbar = myTabbar.cells("events").attachToolbar();
+    myGridEventsToolbar.setIconsPath("{{ asset('/images/') }}");
+    myGridEventsToolbar.loadStruct( "{{ url('xml_ATS_events_grid_toolbar') }}");
+    myGridEventsToolbar.attachEvent("onClick",function(itemid){
          switch (itemid) {
             case 'refresh':
-                globalLayout.cells("b").progressOn();
-                GlobalRefresh();
+                myLayoutEvents.cells("b").progressOn();
+                PageRefresh();
                 break;
             case "print":
-                myGrid.printView();
+                myGridEvents.printView();
                 break;
             default:
                 alert(itemid);
                 break;
         }
     });
-    myGridToolbar.attachEvent("onStateChange",function(itemid, state){
-         switch (itemid) {
-            case 'location':
-                myGrid.setColumnHidden(0,!state);      
-                myGrid.setColumnHidden(1,!state);      
-                break;
-            case 'execution':
-                myGrid.setColumnHidden(8,!state);  
-                myGrid.setColumnHidden(9,!state);  
-                myGrid.setColumnHidden(10,!state);  
-                myGrid.setColumnHidden(11,!state);  
-                break;
-            case 'variable':
-                myGrid.setColumnHidden(12,!state);  
-                myGrid.setColumnHidden(13,!state);  
-                break;
-            default:
-                alert(itemid);
-                break;
-        }
-    });
+
+    myLayoutJobs = myTabbar.cells("jobs").attachLayout("2U");
+    myLayoutJobs.cells("a").setWidth(800); 
+    myLayoutJobs.cells("a").setText("{{ "Jobs" | trans }}"); 
+    myLayoutJobs.cells("b").setText("{{ "Detail" | trans }}"); 
     
-    myDetail = globalLayout.cells("c").attachGrid();
+    myGridJobs = myLayoutJobs.cells("a").attachGrid();
+    myGridJobs.setImagePath( "{{ asset('/images/') }}");
+    myGridJobs.setHeader("{{ "Date" | trans }},{{ "Event" | trans }},{{ "Job" | trans }},{{ "User" | trans }},{{ "Domain" | trans }}");
+    myGridJobs.attachHeader("#text_filter,#select_filter,#text_filter,#select_filter,#select_filter");
+    myGridJobs.setInitWidths("140,80,*,120,120");
+    myGridJobs.setColAlign("left,left,left,left,left");
+    myGridJobs.setColTypes("ro,ro,ro,ro,ro");
+    myGridJobs.setColSorting("date,str,str,str,str");
+    myGridJobs.enableAlterCss("","");
+    myGridJobs.init();    
+    myGridJobs.attachEvent("onRowDblClicked", Detail );
+
+    myDetail = myLayoutJobs.cells("b").attachGrid();
     myDetail.selMultiRows = true;
-    myDetail.setImagePath( "{{ asset('/images/') }}");
-    myDetail.setHeader("{{ "Seq." | trans }},{{ "Attribute" | trans }},{{ "Value" | trans }}");
-    myDetail.attachHeader("#select_filter,#text_filter,#text_filter");
-    myDetail.setInitWidths("80,200,*");
-    myDetail.setColAlign("right,left,left");
+//    myDetail.setImagePath( "{{ asset('/images/') }}");
+    myDetail.setHeader("{{ "Attr." | trans }},{{ "Attribute" | trans }},{{ "E." | trans }}");
+    myDetail.attachHeader("#text_filter,#text_filter,#text_filter");
+    myDetail.setInitWidths("150,*,0");
+    myDetail.setColAlign("left,left,left");
     myDetail.setColTypes("ro,ro,ro");
-    myDetail.setColSorting("int,str,str");
+    myDetail.setColSorting("str,str,int");
     myDetail.enableAlterCss("","");
     myDetail.init();
-    
-    // Premier chargement avant le smart rendering
-    autorefresh = setInterval( "GridRefresh()",update*1000);
-});
 
-function GlobalRefresh() {
-    clearInterval( autorefresh );
-    GridRefresh();
-    autorefresh = setInterval( "GridRefresh()", update*1000 );
 }
 
-function GridRefresh() {
-    var currentTime = new Date();
-    var hours = currentTime.getHours();
-    var minutes = currentTime.getMinutes();
-    var seconds = currentTime.getSeconds();
-    if (minutes < 10){
-    minutes = "0" + minutes;
-    }
-    if (seconds < 10){
-    seconds = "0" + seconds;
-    }
-    myRibbon.setItemText( "refresh", hours + ":" + minutes + ":" +  seconds );
-    myGrid.load("{{ url('xml_ATS_audit_grid') }}?time="+seconds+"&history="+max_history+"&chained="+chained+"&only_warning="+only_warning, function(){    
-        globalLayout.cells("b").progressOff();
-        myGrid.refreshFilters();
-        myGrid.filterByAll();
-//        myGrid.filterBy(4, status);  
-        myDonut.load( "{{ url('xml_ATS_jobs_pie') }}?chained="+chained+"&only_warning="+only_warning, function () {
-            myDonut.refresh();                
-            globalLayout.progressOff();
-            globalLayout.cells("a").progressOff();
-        });
-    });    
+function PageRefresh() {   
+    myGridEvents.load("{{ url('xml_ATS_audit_grid') }}", function(){    
+        myGridEvents.refreshFilters();
+        myGridEvents.filterByAll();
+        myGridJobs.load("{{ url('xml_ATS_audit_jobs') }}", function(){    
+            myGridJobs.refreshFilters();
+            myGridJobs.filterByAll();
+        });           
+    });   
 }
 
 function Detail(id) {
-    globalLayout.cells("c").progressOn();
-    myDetail.clearAndLoad("{{ url('xml_ATS_audit_detail') }}?id="+id, function(){    
-        globalLayout.cells("c").progressOff();
+    myLayoutJobs.cells("b").progressOn();
+    myDetail.clearAndLoad("{{ url('xml_ATS_audit_job') }}?id="+id, function(){    
+        myLayoutJobs.cells("b").progressOff();
     });    
 }
 </script>
